--- a/alert-template/style.css
+++ b/alert-template/style.css
@@ -146,6 +146,7 @@ body {
   font-size: 15px;
   font-weight: bold;
   padding: 15px 40px;
+  min-width: 215px;
 }
 .alert .actions .gray {
   background-color: #656D78;
